--- a/src/main/webapp/app/shared/sidebar/home/HomeSidebarPartial.html
+++ b/src/main/webapp/app/shared/sidebar/home/HomeSidebarPartial.html
@@ -24,7 +24,7 @@
             <div class="well well-small">
                 <h4 id="groups-list-title">
                     <span class="glyphicon glyphicon-list-alt"></span>
-                    &nbsp;<span translate="tatami.sidebar.home.myGroups"></span>
+                    &nbsp;<span translate="tatami.home.sidebar.myGroups"></span>
                 </h4>
                 <div class="items">
                     <div ng-repeat="group in groups">
@@ -39,7 +39,7 @@
             <div class="well well-small">
                 <h4 id="follow-suggest-title">
                     <span class="glyphicon glyphicon-random"></span>
-                    &nbsp;<span translate="tatami.sidebar.home.whoToFollow"></span>
+                    &nbsp;<span translate="tatami.home.sidebar.whoToFollow"></span>
                 </h4>
                 <div ng-repeat="suggestion in suggestions">
                     <div class="items">
@@ -79,7 +79,7 @@
             <div class="well well-small">
                 <h4 id="profile-trends-title">
                     <span class="glyphicon glyphicon-fire"></span>
-                    &nbsp;<span translate="tatami.sidebar.trends"></span>
+                    &nbsp;<span translate="tatami.home.sidebar.trends"></span>
                 </h4>
                 <div class="items">
                     <div ng-repeat="tag in tags">
