changed shortcut icon type

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <title>Tatami</title>
     <meta name="author" content="Ippon Technologies">
-    <link rel="shortcut icon" type="image/png" href="/assets/img/company-logo.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/img/company-logo.ico">
     <link href="/assets/bower_components/bootstrap/dist/css/bootstrap-custom.css" rel="stylesheet">
     <link href="/assets/css/tatami.css" rel="stylesheet">
 
