--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,11 +10,9 @@
     <!-- Needed if using HTML5 History API and relative links (Angular routing) -->
     <base href="/">
 
-    <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1.0">-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1.0">
     <!--<meta name="description" content="">-->
-
-    <!--<link href="/css/vendor/css/bootstrap.css" rel="stylesheet">-->
 
     <!--[if IE]>
         <link rel="stylesheet" type="text/css" href="/assets/css/ie-only.css" />
@@ -93,6 +91,7 @@
     <script src="/app/TatamiApp.js"></script>
     <script src="/app/components/home/HomeModule.js"></script>
     <script src="/app/components/account/AccountModule.js"></script>
+    <script src="/app/components/about/AboutModule.js"></script>
 
     <script src="/app/components/account/FormController.js"></script>
 
@@ -108,17 +107,13 @@
     <!-- Timeline View -->
     <script src="/app/components/home/timeline/TimelineModule.js"></script>
 
-    <!-- Home Sidebar Partial -->
-    <script src="/app/shared/sidebar/home/HomeSidebarModule.js"></script>
-    <script src="/app/shared/sidebar/home/ProfileController.js"></script>
-    <script src="/app/shared/sidebar/home/GroupsController.js"></script>
-    <script src="/app/shared/sidebar/home/SuggestionController.js"></script>
-    <script src="/app/shared/sidebar/home/TrendsController.js"></script>
+    <!-- Home Sidebar View -->
+    <script src="/app/shared/sidebars/home/HomeSidebarModule.js"></script>
+    <script src="/app/shared/sidebars/home/HomeSidebarController.js"></script>
 
-    <!-- Profile Sidebar Partial -->
-    <script src="/app/shared/sidebar/profile/ProfileSidebarModule.js"></script>
-    <script src="/app/shared/sidebar/profile/ProfileSidebarController.js"></script>
-    <script src="/app/shared/sidebar/profile/ProfileTrendsController.js"></script>
+    <!-- Profile Sidebar View -->
+    <script src="/app/shared/sidebars/profile/ProfileSidebarModule.js"></script>
+    <script src="/app/shared/sidebars/profile/ProfileSidebarController.js"></script>
     <!------------------------------------------------------------------------->
 
     <!------------------------------------------------------------------------->
@@ -127,7 +122,7 @@
 
     <!-- Profile View -->
     <script src="/app/components/account/profile/ProfileModule.js"></script>
-    <script src="/app/components/account/profile/AccountProfileController.js"></script>
+    <script src="/app/components/account/profile/ProfileController.js"></script>
 
     <!-- Preferences View -->
     <script src="/app/components/account/preferences/PreferencesModule.js"></script>
@@ -150,7 +145,7 @@
 
     <!-- Groups View -->
     <script src="/app/components/account/groups/GroupsModule.js"></script>
-    <script src="/app/components/account/groups/AccountGroupsController.js"></script>
+    <script src="/app/components/account/groups/GroupsController.js"></script>
     <script src="/app/components/account/groups/GroupsManageController.js"></script>
 
     <!-- Tags View -->
