added emoticon support for statuses
Thanks to jchampemont for the regex logic in EmoticonFilter.js

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -164,6 +164,7 @@
 
     <!-- Shared Filters -->
     <script src="/app/shared/filters/MarkdownFilter.js"></script>
+    <script src="/app/shared/filters/EmoticonFilter.js"></script>
 
     <!-- Shared Services -->
     <script src="/app/shared/services/GeolocService.js"></script>
